# TimeScan

./: CMakeLists.txt  Makefile  TimeScanMX.pro  main.cpp  qchartmx.cpp  qchartmx.h  qchartmx.qrc  qchartmx.ui
lib/: CMakeLists.txt  lib.pro  listOfSignals.txt  script.cpp  script.h  timescan.cpp  timescan.h  timescan.ui
